--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "NTA0NjA1ODk0MzU3NTQ5MDc3.DrHehg.65i8ktNRrVKzwyMh0pDFd3FLBS8",
-    "prefix": "spidermania-1989"
+    "token": "NTA1NDE2MTI1MjA3NTQzODE4.DrTRMw.ttGkzK9yJRJiXfnI-6dDmsF8i0g",
+    "prefix": "Adolf-Hitler"
   }
